Nuvolar Project/force-app/main/default/objects/FlightService__c/FlightService__c.object-meta.xml
<CustomObject>
    <label>Flight Service</label>
    <nameField>
        <label>Flight Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>