Nuvolar Project/force-app/main/default/objects/FlightService__c/fields/ArrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flight Services (Arrival Airport)</relationshipLabel>
    <relationshipName>ArrivalFlightService</relationshipName>
    <type>Lookup</type>
</CustomField>