Nuvolar Project/force-app/main/default/objects/FlightService__c/fields/DepartureAirport__c.field-meta.xml
<CustomField>
    <fullName>DepartureAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>DepartureAirportService</relationshipLabel>
    <relationshipName>Flight_Services</relationshipName>
    <type>Lookup</type>
</CustomField>