Nuvolar Project/force-app/main/default/objects/FlightService__c/fields/FlightDistance__c.field-meta.xml
<CustomField>
    <fullName>FlightDistance__c</fullName>
    <label>Flight Distance(kms)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>